2011-07-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Fix tabbar-ruler in terminal and window-system.

	* init-basic.el: Keep auto-insert-query 'function
	(find-dotemacs-file): Fix find-dotemacs-file.

2011-07-02  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (tabbar-popup-menu): Fix tabbar-ruler.

	* init-basic.el (grep-current-dir): Fix grep.

2011-07-01  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: C-c C-v to toggle view-mode.

2011-06-30  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Fix grep on aix.

2011-06-28  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Fix vimpulse.

	* init-misc.el ("viper"): Fix vimpulse.

2011-06-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("viper"): Use vimpulse.

	* init-toolbar.el: viper-mode menu item.

2011-06-26  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add minor-mode menu item - goto-address-mode.

2011-06-25  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-current-dir): Fix grep.

2011-06-24  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Fix tabbar font.
	Add site-lisp dir.

2011-06-21  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add copy menu item to tabbar-popup-menu.
	: Fix tabbar-popup-menu.

2011-06-20  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (auto-mode-alist): Use ntcmd-mode instead of dos-mode.
	Use bat-generic-mode instead of ntcmd-mode.
	("vc-svn"): Auto load psvn when used vc-svn.

2011-06-18  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (ecb-autoloads): for compatible.

	* init-basic.el: Don't report error when can't found gcc.

2011-06-17  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: backspace key for aix.
	(cedet-possible-dirs): if have offical cedet.

2011-06-16  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (auto-insert-expand): autoinsert.

2011-06-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (write-file-hooks): time-stamp.